removed turbolinks as a dependency that gets compiled, adds it via CDN instead, fixed text-seoncdary on my projects, which overlapped

--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -11,7 +11,6 @@
 
     .text-secondary {
       font-size: 2rem;
-      margin-bottom: 2rem;
     }
   }
 
